# haskell-foreign-rust

./: CHANGELOG.md  cabal.project  foreign-rust.cabal
.github/workflows/: haskell-ci.yml
cbits/: wrap-rust-haskell-ffi.c
demo-annotated/: Main.hs
src/Data/: Annotated.hs  Structured.hs
src/Data/Structured/: TH.hs
src/Foreign/Rust/: Failure.hs  SafeConv.hs
src/Foreign/Rust/Marshall/: External.hs  Fixed.hs  Util.hs  Variable.hs
src/Foreign/Rust/Serialisation/: JSON.hs  Raw.hs
src/Foreign/Rust/Serialisation/Raw/: Base16.hs  Base58.hs  Base64.hs  Decimal.hs
test/: Main.hs
test/Test/Serialisation/: JSON.hs  Types.hs
test/Test/Serialisation/Raw/: Base16.hs  Base58.hs  Base64.hs  Decimal.hs
test/Test/Util/: TH.hs
